--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   awesome_dialog: ^3.2.1
   flutter_onboarding_slider: ^1.0.11
-  shared_preferences: ^2.0.13
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
